security: harden authentication and user registration